k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: agrilens
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          args:
            - "-c"
            - "shared_buffers=32MB"
            - "-c"
            - "max_connections=25"
            - "-c"
            - "work_mem=2MB"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 30m
              memory: 40Mi
            limits:
              cpu: 200m
              memory: 100Mi
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - admin
                - -d
                - plant_disease
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: agrilens
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
